--- a/Coderproyecto/index.html
+++ b/Coderproyecto/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/estilos.css">
-    <title>Document</title>
+    <link rel="icon" href="./imagenes/favicon.ico">
+   <title>ProyectoCoder</title>
 </head>
 
 <header class="header">
-
 </header>
-<nav class="navegacion">
+<nav class="nav">
     <ul>
         <li class="lista">
             <a href="">Inicio</a>
@@ -20,11 +20,19 @@
             <a href="">Ubicacion</a>
         </li>
     </ul>
-   
-
 </nav>
 <body>
-   
-    <!-- <script src="./JS/index.js"></script> -->
+   <div class="contenedor">
+    <div class="img-contenedor">
+       <a href="./paginas/canchas.html"><img src="./imagenes/FachadaBernabeu,1.jpg" alt="Santiago Bernabeu">Santiago Bernabeu</a> 
+        <a href="./paginas/canchas.html"><img src="./imagenes/1571831170_220352_1573571110_noticia_normal.jpg" alt="">Wanda Metropolitano</a>
+        <a href="./paginas/canchas.html"><img src="./imagenes/nou camp nou_5_570x340.jpg" alt="">Camp Nou</a>
+        <a href="./paginas/canchas.html"><img src="./imagenes/bayern-759x500.jpeg" alt="">Allianz Arena</a>
+        <a href="./paginas/canchas.html"><img src="./imagenes/borussia-dortmund-4.jpg" alt="">Signal Iduna Park</a>
+        <!-- <img src="./imagenes/cas-2.jpg" alt=""> -->
+    </div>
+
+   </div>
+    <script src="./JS/index.js"></script>
 </body>
 </html>
