--- a/Coderproyecto/paginas/canchas.html
+++ b/Coderproyecto/paginas/canchas.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Css/estilos.css">
     <title>Document</title>
 </head>
+
+<header class="header">
+
+</header>
+<nav class="nav">
+    <ul>
+        <li class="lista">
+            <a href="">Inicio</a>
+            <a href="">Canchas</a>
+            <a href="">Reservas</a>
+            <a href="">Ubicacion</a>
+        </li>
+    </ul>
+</nav>
 <body>
-    
+
+   </div>
+    <!-- <script src="./JS/index.js"></script> -->
 </body>
 </html>
